2005-11-21  Senganal T <tsenganal@novell.com>

	* DbDataAdapter.cs
	* DbParameter.cs
	* DbTransaction.cs
	* DbTable.cs
	* DbProviderFactories.cs
	* DbException.cs
	* DbProviderFactory.cs
	* DbCommandBuilder.cs
	* DbDataReader.cs
	* DbParameterCollection.cs
		- Added stubs and other changes for ADO.NET 2.0 compatibility.
	* DbMetaDataCollectionNames.cs (new file)
		- Added DbMetaDataCollectionNames Enumeration 

2005-10-24  Konstantin Triger <kostat@mainsoft.com>

        * DataContainer.cs: removed extra type validation for object container

2005-10-14  Senganal T  <tsenganal@novell.com>

	* DbDataAdapter.cs : 
		- BuildSchema() : Set the value of DataColumn Property 'AllowDBNull'
		as returned by database. Fixes bug#76433. 

2005-09-21 Boris Kirzner <borisk@mainsoft.com>
	* Index.cs: 
		- Rebuild index immediately after construction.
		- Do not add records if they do not padd key filtration.
		- Do not attempt to remove records if the are not in the index.
	* Key.cs:
		- Added HasFilter property, CanContain and DependsOn methods.
		- Equals() uses filter expression comparison.		

2005-09-07 Boris Kirzner <borisk@mainsoft.com>
	* DataContainer.cs: Do not convert value if container type 
	is System.Object.

2005-08-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* DbTypes.cs: Marked internal to fix public API.

2005-08-05  Sureshkumar T  <tsureshkumar@novell.com>

	* DbDataAdapter.cs:
	- Update (): set parameter values only after getting the
	appropriate command from command builder. Close reader only if it
	is not closed before. Use parameter's SourceVersion. Whitespace
	corrections to comply with standard.

2005-07-22  Sureshkumar T  <tsureshkumar@novell.com>

	* DataColumnMappingCollection.cs: updated attributes & attribute
	descriptions to match with masterinfos.

2005-07-15  Sureshkumar T  <tsureshkumar@novell.com>

	* DataTableMappingCollection.cs: GetTableMappingBySchemaAction:
	meaningful error message if mapping is missing.
