@@ -1,3 +1,7 @@
+2005-11-22  Konstantin Triger <kostat@mainsoft.com>
+
+	* DbProviderFactory.cs: TARGET_JVM ifdef.
+
 2005-11-21  Senganal T <tsenganal@novell.com>
 
 	* DbDataAdapter.cs
